--- a/assets/css/shortcodes.css
+++ b/assets/css/shortcodes.css
@@ -3762,7 +3762,7 @@ form label i.icon-star.active {
     font-size: 40px;
     font-style: normal;
     line-height: 55px;
-    text-transform: capitalize;
+    text-transform: none !important;
 }
 
 .content-tabs .side-bar .title-widget {
